<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="282dp"
        android:layout_height="204dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/welcome" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >
    <TextView
        android:layout_marginTop="50dp"
        android:id="@+id/tvAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="Quiz App!"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        app:cardCornerRadius="20dp"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#364A43"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="#7A8089"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="20dp"
            >

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etname"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/name"

    android:inputType="textCapWords"
    android:textColor="#364A33"
    android:textColorHint="#7A8089"
        />

        </com.google.android.material.textfield.TextInputLayout>

<Button
    android:id="@+id/btnStart"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/start"
    android:layout_marginTop="16dp"
    android:textSize="18sp"
    android:background="@color/design_default_color_primary_dark"
    android:textColor="@android:color/white"
    />

    </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    </LinearLayout>


</LinearLayout>