<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".QuizQuestionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        >
        <TextView
            android:id="@+id/tv_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="#363A43"
            android:text="@string/sample_ques"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="210dp"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/quiz_image_Description"
            tools:src="@drawable/ic_flag_austria">

        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            >
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="0dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:layout_weight="1"
                android:max="100"
                android:minHeight="50dp"
                android:progress="4"/>

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:textSize="14sp"
                android:text="@string/_4_9_Progress"

                />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_option_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="#7A8089"
            android:textSize="18sp"
        android:background="@drawable/default_option_border_bg"
            android:text="@string/sample_option"
            />

        <TextView
            android:id="@+id/tv_option_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="#7A8089"
            android:textSize="18sp"
            android:background="@drawable/default_option_border_bg"
            android:text="@string/sample_option"
            />

        <TextView
            android:id="@+id/tv_option_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="#7A8089"
            android:textSize="18sp"
            android:background="@drawable/default_option_border_bg"

            android:text="@string/sample_option"
            />

        <TextView
            android:id="@+id/tv_option_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="#7A8089"
            android:textSize="18sp"
            android:background="@drawable/default_option_border_bg"
            android:text="@string/sample_option"
            />


        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/design_default_color_primary"
            android:textColor="@color/white"
            android:text="@string/submit_quiz"
            android:textStyle="bold"
            android:textSize="18sp"

            />

    </LinearLayout>

</ScrollView>