<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ResultAnalysis">

    <ProgressBar
            android:id="@+id/ResultprogressBar"
            android:layout_marginLeft="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:layout_weight="1"
            android:max="100"
            android:minHeight="50dp"
            android:progress="4"/>

    <TextView
            android:id="@+id/tv_Resultprogress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/_4_9_Progress" />

    <ImageView
            android:id="@+id/purple_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_Resultprogress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/purple_bg"/>

    <TextView
            android:id="@+id/tv_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/purple_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="10dp"
            android:padding="20dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/sample_ques"
            android:textColor="#FFFF"
            android:textSize="30sp" />

    <ImageView
        android:id="@+id/iv_image_analysis"
        android:layout_width="250dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@id/tv_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/quiz_image_Description"
        tools:src="@drawable/ic_flag_of_australia"/>

    <ImageView
        android:id="@+id/white_background"
        app:layout_constraintTop_toBottomOf="@id/iv_image_analysis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/white_bg"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <TextView
            android:id="@+id/your_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/white_background"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/your_answer"
            android:textColor="#635EEE"
            android:textSize="24sp"
            android:textStyle="bold" />

    <View
        android:id="@+id/barrier_1"
        app:layout_constraintTop_toBottomOf="@id/your_answer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="70dp"
        android:layout_height="2dp"
        android:background="@drawable/purple_bg"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tv_YourAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toBottomOf="@id/barrier_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="6dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:text="@string/sample_option" />

    <TextView
        android:id="@+id/correct_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_YourAnswer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:text="@string/correct_answer"
        android:gravity="center"
        android:fontFamily="@font/poppins"
        android:textColor="#635EEE"
        android:layout_marginTop="20dp"
        android:textSize="24sp" />

    <View
        android:id="@+id/barrier_2"
        app:layout_constraintTop_toBottomOf="@id/correct_answer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="70dp"
        android:layout_height="2dp"
        android:background="@drawable/purple_bg"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tv_AcutalCorrectAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/barrier_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/poppins"
        android:padding="6dp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:text="@string/sample_option" />

    <ImageView
        android:id="@+id/btn_previous"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/back_btn"
        android:layout_marginEnd="200dp" />

    <ImageView
        android:id="@+id/btn_next"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/forward_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>